docs(tomcat): retract objects_swept=0 — the counter is printed before it is written
The fourth-recurrence page concluded from `objects_swept=0` that the sweep
reclaimed nothing, that no young object is reclaimed at all, and that class
unloading "cannot work by construction". The counter is incremented in the
publication loop 345 lines AFTER the line that printed it, so the zero was
structural — true of every run on every workload.

`RClassUnloadSweep` refutes the conclusion directly: a class defined in a
throwaway loader, used, dropped and collected is unloaded on HotSpot and on
CratonVM under the default collector, CRATONVM_NO_MOVING_YOUNG=1, G1 and ZGC.
The non-moving young sweep is the path the page called inert.

What survives is the measured half and it is the whole finding: the walk covers
the evicted loader's base and never stops at it. The retraction also names why
that is invisible today — the phantom-extent guard only fires when the swallowed
object is MARKED, so an over-sized extent that swallows only DEAD objects passes
silently, which is a class-unloading failure and nothing else.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>